# Conversation-SFT

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: inference.ipynb  supervised_fine_tuning.ipynb
src/: decode.py  manual.py  prepare.py  upload.py
test/: test_prepare.py
