[project]
name = "instagram-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.2",
    "icecream>=2.1.10",
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
